HotFix: typo in title fixed

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es-MX">
 <head>
     <meta charset="UTF-8">
-    <title>Workhsop</title>
+    <title>Workshop</title>
 </head>
 <body>
     
