Added banner markup

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <title>Workshop</title>
 </head>
 <body>
+    <div>
+        <hgroup>
+            <h1>Hola mundo!</h1>
+            <h2>mi super duper sitio</h2>
+        </hgroup>
+
+        <form action="">
+            <input type="text">
+            <input type="text">
+            <input type="text">
+            <input type="submit">
+        </form>
+    </div>
     
 </body>
 </html>
